--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,3 +11,70 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+/**********Algorithme**********/
+
+
+.selectedButton {
+  border-radius: 10px;
+  display: inline-block;
+  width: 600px;
+  height: 150px;
+  background: #8693BB;
+  display: grid;
+  grid-template-columns: repeat(3, 200px);
+  grid-template-rows: repeat(3, 50px);
+}
+
+.unselectedButton {
+  border-radius: 10px;
+  display: inline-block;
+  width: 600px;
+  height: 150px;
+  background: #4C5368;
+  display: grid;
+  grid-template-columns: repeat(3, 200px);
+  grid-template-rows: repeat(3, 50px);
+}
+
+.buttonBox1 {
+  grid-column: 1 / 2;
+  grid-row: 1 / 3;
+}
+
+.buttonBox2 {
+  grid-column: 2 / 4;
+  grid-row: 1 / 3;
+  display: flex;
+}
+
+.selectedBox3 {
+  border-bottom-right-radius: 10px;
+  border-bottom-left-radius: 10px;
+  background: #CAD2E9;
+  grid-column: 1 / 4;
+  grid-row: 3 / 4;
+  display: flex;
+}
+
+.unselectedBox3 {
+  border-bottom-right-radius: 10px;
+  border-bottom-left-radius: 10px;
+  background: #737A8F;
+  grid-column: 1 / 4;
+  grid-row: 3 / 4;
+  display: flex;
+}
+
+.ssd {
+  margin: auto;
+  font-size: 25px;
+  color: #dfdee7;
+  cursor: default;
+}
+
+.ssdText {
+  margin: auto;
+  color: #000000;
+  cursor: default;
+}
