Navbar position absolute

--- a/client/src/NavBar/navbar.module.css
+++ b/client/src/NavBar/navbar.module.css
@@ -32,7 +32,9 @@
       margin-left: 0;
       margin-right: 0;
       flex-wrap: nowrap !important;
-      
+      position: absolute;
+      bottom: 0;
+      width: 100%;
   }
 
 
@@ -63,3 +65,4 @@
     padding-top: 10px;
     
 }
+
